--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>オッタークリーン予約フォーム</title>
+    <title>うつみ療整院予約フォーム</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         /* 右端の細いナビ（固定） */
@@ -944,7 +944,7 @@
     </div>
 
     <div class="container">
-        <h1>オッタークリーン<br>予約フォーム
+        <h1>うつみ療整院<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -952,21 +952,17 @@
         <div class="label">電話番号<span class="required">必須</span></div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
-        <div class="label">住所<span class="required">必須</span></div>
-        <input type="text" id="tellmetheaddress" placeholder="住所を入力してください" oninput="saveInput('tellmetheaddress')">
-
-        <div class="label">来店回数<span class="required">必須</span></div>
+        <div class="label">性別<span class="required">必須</span></div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初回</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">二回目以降</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">男性</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">女性</button>
         </div>
 
         <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
         <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">エアコンクリーニング</button>
-            <button type="button" onclick="showMenu('female')">水回りクリーニング</button>
-            <button type="button" onclick="showMenu('whitening')">洗濯機クリーニング</button>
+            <button type="button" onclick="showMenu('male')">気導術</button>
+            <button type="button" onclick="showMenu('female')">マツエセラピー</button>
         </div>
 
         <!-- メニュー表示エリア（選択されたメニュー名がここに出る） -->
@@ -976,126 +972,27 @@
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆エアコンクリーニング◆</span>
+                <span class="highlight-text">◆気導術◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング"
-                    data-price="8800">壁掛けノーマルエアコン(¥8,800)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング"
-                    data-price="16500">壁掛けお掃除機能付きエアコン(¥16,500)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング"
-                    data-price="22000">天井埋め込み式エアコン(¥22,000)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング"
-                    data-price="11000">壁掛け業務用エアコン(¥11,000)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング"
-                    data-price="21000">高性能機種(¥21,000)</button>
-            </div>
-
-            <div class="labelhidariyose">エアコンの型式番号</div>
-            <input type="text" id="EakonModelnumber" placeholder="エアコンの型式番号を入力してください">
-
-            <div class="highlight-background">
-                <span class="highlight-text">オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="2200">防菌防カビコート(¥2,200)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="2200">ドレンホース洗浄(¥2,200)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="3300">室外機洗浄(¥3,300)</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="2200">エコ洗剤(¥2,200)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="550">防虫キャップ(¥550)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="4400">（業務用）防菌防カビコート(¥4,400)</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="4400">（業務用）防菌防カビコート(¥4,400)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="気導術" data-price="8800">ヘッドスパ</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="気導術" data-price="16500">フェイスアップ</button>
             </div>
         </div>
 
         <div id="female" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆シェービングコース◆</span>
+                <span class="highlight-text">◆マツエセラピー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="シェービングコース"
-                    data-price="14300">キッチン(¥14,300)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="シェービングコース"
-                    data-price="14300">レンジフード(¥14,300)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="シェービングコース"
-                    data-price="15400">浴室(¥15,400)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="シェービングコース"
-                    data-price="8800">洗面所(¥8,800)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="シェービングコース"
-                    data-price="8800">トイレ(¥8,800)</button>
-            </div>
-            <div class="highlight-background">
-                <span class="highlight-text">オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="4400">食洗機(¥4,400)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="4400">お魚グリル(¥4,400)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="3300">電子レンジ(¥3,300)</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">排水管高圧洗浄（キッチン）(¥5,500)</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">内部パーツ分解洗浄（レンジフード）(¥5,500)</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">浴室換気扇分解洗浄(¥5,500)</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
-                    data-price="3500">エプロン内高圧洗浄（浴室）(¥3,500)</button>
-                <button type="button" id="hatiirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">鏡の鱗取り(¥5,500)</button>
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">カビ防止コート（浴室）(¥5,500)</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">排水管高圧洗浄（浴室）(¥5,500)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="8800">風呂釜洗浄(¥8,800)</button>
-                <button type="button" id="yonirradiations" onclick="selectirradiations(this)"
-                    data-price="2200">イス・フタ・桶洗浄(¥2,200)</button>
-                <button type="button" id="goirradiations" onclick="selectirradiations(this)"
-                    data-price="5500">ブラインド（浴室）(¥5,500)</button>
-                <button type="button" id="rokuirradiations" onclick="selectirradiations(this)"
-                    data-price="4400">トイレタンク洗浄(¥4,400)</button>
-                <button type="button" id="sitiirradiations" onclick="selectirradiations(this)"
-                    data-price="3300">換気扇の分解洗浄（トイレ）(¥3,300)</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="マツエセラピー" data-price="14300">脳梗塞</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="マツエセラピー" data-price="14300">側湾症</button>
+                <button type="button" onclick="selectSymptom(this)" data-category="マツエセラピー" data-price="15400">全身調整</button>
             </div>
         </div>
 
-        <div id="whitening" class="menu-section">
-            <div class="highlight-background">
-                <span class="highlight-text">◆洗濯機クリーニング◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-category="マッサージコース"
-                    data-price="15000">縦型洗濯機(¥16,500)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="マッサージコース"
-                    data-price="15000">ドラム式洗濯機(¥33,000)</button>
-                <button type="button" onclick="selectSymptom(this)" data-category="マッサージコース"
-                    data-price="15000">縦型洗濯機（乾燥機能付き）(¥22,000)</button>
-            </div>
-
-            <div class="labelhidariyose">洗濯機の型式番号</div>
-            <input type="text" id="SentakukiModelnumber" placeholder="洗濯機の型式番号を入力してください">
-
-            <div class="highlight-background">
-                <span class="highlight-text">オプション</span>
-            </div>
-            <div class="irradiations">
-                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">ビートウォッシュ(¥5,500)（縦型）</button>
-                <button type="button" id="repeatirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">排水管高圧洗浄(5,500)</button>
-                <button type="button" id="sanirradiations" onclick="selectirradiations(this)"
-                    data-price="15000">洗濯パン(¥3,300)</button>
-            </div>
-        </div>
+        <div class="label">お悩みの症状（任意）</div>
+        <input type="text" id="tellmetheaddress" placeholder="お悩みの症状を入力してください">
 
         <div class="highlight-background">
             <div class="kibounitizi">希望日時<span class="required">必須</span></div>
@@ -1195,11 +1092,9 @@
         document.addEventListener('DOMContentLoaded', function () {
             const savedName = localStorage.getItem('name');
             const savedPhone = localStorage.getItem('phone');
-            const savedtellmetheaddress = localStorage.getItem('tellmetheaddress');
 
             if (savedName) document.getElementById('name').value = savedName;
             if (savedPhone) document.getElementById('phone').value = savedPhone;
-            if (savedtellmetheaddress) document.getElementById('tellmetheaddress').value = savedtellmetheaddress;
         });
 
         // スムーズスクロール
@@ -1235,8 +1130,7 @@
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
-            const visitCountText = visitCount ? `・<span style="color:#13ca5e;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
-            const selectedMenuText = selectedMenu ? `<span style="color:#13ca5e;"><strong>【コース】</strong></span><br>・${selectedMenu}` : '・コースが未選択です';
+            const visitCountText = visitCount ? `・<span style="color:#13ca5e;"><strong>性別</strong></span>：${visitCount}` : '・性別が未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
@@ -1291,18 +1185,8 @@
         </div>
         <hr>
         <div class="info-row">
-            <p>${selectedMenuText}</p>
-            <button class="edit-button" onclick="scrollToElement('course')">修正する</button>
-        </div>
-        <hr>
-        <div class="info-row">
             <p>${selectedSymptomText}</p>
             <button class="edit-button" onclick="scrollToElement('beautifuleyebrows'); scrollToElement('shinyskin'); scrollToElement('Cosmetologyasawhole');">修正する</button>
-        </div>
-        <hr>
-        <div class="info-row">
-            <p>${irradiationsText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstirradiations')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
@@ -1477,22 +1361,21 @@
                 }
             });
 
-            // selectedSymptom から削除
-            selectedSymptom = selectedSymptom.filter(item => !(item.category === category && item.name === name));
-
-            // 時間と価格を再計算
+            // 🛠 修正ポイント：再構築
+            selectedSymptom = [];
             selectedMenuTime = 0;
             menuPrice = 0;
-            selectedSymptom.forEach(item => {
-                selectedMenuTime += menuTimes[item.name] || 0;
-                const btn = [...document.querySelectorAll('.symptoms button')].find(
-                    b => b.textContent === item.name && b.getAttribute('data-category') === item.category
-                );
-                if (btn) {
-                    menuPrice += parseInt(btn.getAttribute('data-price'), 10) || 0;
-                }
+
+            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+            updatedSelectedButtons.forEach(btn => {
+                const category = btn.getAttribute('data-category');
+                const name = btn.textContent;
+                selectedSymptom.push({ category, name });
+                selectedMenuTime += menuTimes[name] || 0;
+                menuPrice += parseInt(btn.getAttribute('data-price'), 10) || 0;
             });
 
+            // 表示更新
             updateSelectedMenusDisplay();
             updateDisplayInfo();
         }
@@ -1610,7 +1493,7 @@
             document.getElementById("treatment-text").innerHTML = "";
 
             // メニューとオプションをリセット
-            selectedSymptom = '';      // メニューのリセット
+            selectedSymptom = [];      // メニューのリセット
             irradiationsCount = '';    // オプションのリセット
             menuPrice = 0;             // メニューの価格リセット
             optionsPrice = 0;          // オプションの価格リセット
@@ -1675,13 +1558,8 @@
                 return;
             }
 
-            if (!formData.tellmetheaddress) {
-                alert('住所を入力してください。');
-                return;
-            }
-
             if (!formData.visitCount) {
-                alert('来店回数を選択してください。');
+                alert('性別を選択してください。');
                 return;
             }
 
@@ -1719,7 +1597,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【ご予約内容】\n\n≪お名前≫：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪住所≫：${formData.tellmetheaddress}\n\n≪来店回数≫：${formData.visitCount}\n\n≪メニュー≫\n${selectedSymptomText}${EakonmodelNumberText}${SentakukimodelNumberText}\n${irradiationsText}\n【希望日時】\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n${formData.message}`
+                text: `【ご予約内容】\n\n≪お名前≫：${formData.name}\n\n≪電話番号≫：${formData.phone}\n\n≪住所≫：${formData.tellmetheaddress}\n\n≪性別≫：${formData.visitCount}\n\n≪メニュー≫\n${selectedSymptomText}${EakonmodelNumberText}${SentakukimodelNumberText}\n${irradiationsText}\n【希望日時】\n≪第一希望日≫\n${formatDate(formData.dates[0])}\n\n≪第二希望日≫\n${formatDate(formData.dates[1])}\n\n≪第三希望日≫\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
