--- a/index.html
+++ b/index.html
@@ -1216,11 +1216,16 @@
         }
 
         function submitForm() {
+            // ✅ ここで最新のチェックボックス状態を取得
+            const selectedClothes = Array.from(document.querySelectorAll('input[name="freshflowerphotography"]:checked'))
+                .map(cb => cb.value);
+
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
                 Otonanenrei: document.getElementById('Otonanenrei').value.trim(),
                 Otonaisyoubangou: document.getElementById('Otonaisyoubangou').value.trim(),
+                FreshflowerphotographyCount: selectedClothes, // ✅ ここに代入
                 footsizeCount, AnshinPackCount, OtonaAnshinPackCount, clothessizeCount, coordinationCount,
                 dates: [
                     document.getElementById('date1').value,
@@ -1250,7 +1255,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟電話番号｠\n・${formData.phone}\n\n【使用予定日】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n【お子様】\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟あんしんパック｠\n・${formData.AnshinPackCount}\n\n【大人】\n｟普段お履きの靴のサイズ｠\n・${formData.Otonaisyoubangou}\n\n｟服のサイズ｠\n・${formData.clothessizeCount}\n\n｟ご年齢｠\n・${formData.Otonanenrei}\n\n｟帯小物コーディネート｠\n・${formData.coordinationCount}\n\n｟あんしんパック｠\n・${formData.OtonaAnshinPackCount}\n\n｟メッセージ｠\n・${formData.message}`
+                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟電話番号｠\n・${formData.phone}\n\n【使用予定日】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n｟ご希望のお衣装｠\n${formData.FreshflowerphotographyCount.length > 0 ? '・' + formData.FreshflowerphotographyCount.join('\n・') : '・未選択'}\n\n【お子様】\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟あんしんパック｠\n・${formData.AnshinPackCount}\n\n【大人】\n｟普段お履きの靴のサイズ｠\n・${formData.Otonaisyoubangou}\n\n｟服のサイズ｠\n・${formData.clothessizeCount}\n\n｟ご年齢｠\n・${formData.Otonanenrei}\n\n｟帯小物コーディネート｠\n・${formData.coordinationCount}\n\n｟あんしんパック｠\n・${formData.OtonaAnshinPackCount}\n\n｟メッセージ｠\n・${formData.message}`
             }]).then(() => {
                 alert('お問合せありがとうございます。追って担当者から返信をさせて頂きます。');
                 liff.closeWindow();
