--- a/index.html
+++ b/index.html
@@ -936,16 +936,16 @@
 
         <div class="info-text">ママ</div>
         <input type="text" id="maman" placeholder="入力してください">
-        
+
         <div class="info-text">パパ</div>
         <input type="text" id="papan" placeholder="入力してください">
 
-        <div class="papan-text">料金表をお送りしますのでご参照ください。</div>
+        <div class="info-text">料金表をお送りしますのでご参照ください。</div>
 
         <div class="labelhidarizurasi">ご希望の支度場所</div>
         <div class="info-text">※お参り同行プランの方は支度場所はご自宅になります。<br>
-支度撮影をご希望の方のみご自宅かスタジオかお選び頂けます。<br>
-スタジオ撮影の方は支度場所はスタジオになります。</div>
+            支度撮影をご希望の方のみご自宅かスタジオかお選び頂けます。<br>
+            スタジオ撮影の方は支度場所はスタジオになります。</div>
         <input type="text" id="Otonaisyoubangou" placeholder="入力してください">
 
         <div class="labelhidarizurasi">撮影同行のご希望の有無</div>
